--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
-
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
-loader_version=0.16.10
-
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
+loader_version=0.16.12
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.kwesou.hardwarespoof
+mod_version=1.0.1
+maven_group=org.kwesou
 archives_base_name=hardware-spoof
-
 # Dependencies
-fabric_version=0.119.2+1.21.4
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.119.9+1.21.5
